[package]
name = "lib_comp"
version = "0.0.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "An easy to use library for pretty print tables of Rust `struct`s and `enum`s."
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
license = "MIT"

[workspace]
members = ["crates/*", "readme"]

[dependencies]
tabled = { path = "./crates/tabled" }
tabled_color = { path = "./crates/tabled_color" }
tabled_current = { path = "./crates/tabled_current" }
tabled_color_current = { path = "./crates/tabled_color_current" }
cli-table = "0.4.7"
comfy-table = "7.1.0"
term-table = "1.3.2"
prettytable-rs = "0.10.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
