[package]
name = "show"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
tabled = { path = "../..", features = ["ansi", "derive"] }
crossterm = "0.25.0"
clap = { version = "4.1.6", features = ["cargo", "derive"] }
